[gd_scene load_steps=2 format=3 uid="uid://c8xteboai_panel"]

[ext_resource type="Script" path="res://addons/tebo_ai/scripts/chat_panel.gd" id="1"]

[node name="ChatPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="Toolbar"]
layout_mode = 2
text = "TeboAI - Godot Assistant"

[node name="CurrentProviderLabel" type="Label" parent="Toolbar"]
layout_mode = 2
text = "(Not configured)"

[node name="Spacer" type="Control" parent="Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearBtn" type="Button" parent="Toolbar"]
layout_mode = 2
text = "Clear"

[node name="SettingsBtn" type="Button" parent="Toolbar"]
layout_mode = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Chat" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MessagesScroll" type="ScrollContainer" parent="TabContainer/Chat"]
layout_mode = 2
size_flags_vertical = 3

[node name="Messages" type="VBoxContainer" parent="TabContainer/Chat/MessagesScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputContainer" type="VBoxContainer" parent="TabContainer/Chat"]
layout_mode = 2

[node name="InputRow" type="HBoxContainer" parent="TabContainer/Chat/InputContainer"]
layout_mode = 2

[node name="InputField" type="TextEdit" parent="TabContainer/Chat/InputContainer/InputRow"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message..."
wrap_mode = 2

[node name="SendBtn" type="Button" parent="TabContainer/Chat/InputContainer/InputRow"]
layout_mode = 2
text = "Send"

[node name="Console" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConsoleToolbar" type="HBoxContainer" parent="TabContainer/Console"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="TabContainer/Console/ConsoleToolbar"]
layout_mode = 2
text = "Console Output"

[node name="Spacer2" type="Control" parent="TabContainer/Console/ConsoleToolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearConsoleBtn" type="Button" parent="TabContainer/Console/ConsoleToolbar"]
layout_mode = 2
text = "Clear"

[node name="CopyConsoleBtn" type="Button" parent="TabContainer/Console/ConsoleToolbar"]
layout_mode = 2
text = "Copy"

[node name="ConsoleScroll" type="ScrollContainer" parent="TabContainer/Console"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConsoleOutput" type="RichTextLabel" parent="TabContainer/Console/ConsoleScroll"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = true
scroll_following = true

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Thinking..."

[node name="StatusBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StatusIcon" type="RichTextLabel" parent="StatusBar"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
bbcode_enabled = true
text = ""
fit_content = true
scroll_active = false

[node name="StatusLabel" type="Label" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"
horizontal_alignment = 1

[node name="SettingsPopup" type="PopupPanel" parent="."]
size = Vector2i(450, 550)

[node name="SettingsContent" type="VBoxContainer" parent="SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 546.0
offset_bottom = 546.0

[node name="Title" type="Label" parent="SettingsPopup/SettingsContent"]
layout_mode = 2
text = "AI Provider Configuration"

[node name="HSeparator2" type="HSeparator" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ProviderSection" type="VBoxContainer" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ProviderLabel" type="Label" parent="SettingsPopup/SettingsContent/ProviderSection"]
layout_mode = 2
text = "AI Provider"

[node name="ProviderRow" type="HBoxContainer" parent="SettingsPopup/SettingsContent/ProviderSection"]
layout_mode = 2

[node name="ProviderOption" type="OptionButton" parent="SettingsPopup/SettingsContent/ProviderSection/ProviderRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshBtn" type="Button" parent="SettingsPopup/SettingsContent/ProviderSection/ProviderRow"]
layout_mode = 2
text = "Refresh"

[node name="ProviderInfo" type="Label" parent="SettingsPopup/SettingsContent/ProviderSection"]
layout_mode = 2
text = "Select a provider to see details"
autowrap_mode = 2

[node name="ModelSection" type="VBoxContainer" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ModelLabel" type="Label" parent="SettingsPopup/SettingsContent/ModelSection"]
layout_mode = 2
text = "Model"

[node name="ModelRow" type="HBoxContainer" parent="SettingsPopup/SettingsContent/ModelSection"]
layout_mode = 2

[node name="ModelOption" type="OptionButton" parent="SettingsPopup/SettingsContent/ModelSection/ModelRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModelIdLabel" type="Label" parent="SettingsPopup/SettingsContent/ModelSection"]
layout_mode = 2
text = "Model ID: -"
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ConnectionSection" type="VBoxContainer" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ConnectionLabel" type="Label" parent="SettingsPopup/SettingsContent/ConnectionSection"]
layout_mode = 2
text = "Connection"

[node name="UrlRow" type="HBoxContainer" parent="SettingsPopup/SettingsContent/ConnectionSection"]
layout_mode = 2

[node name="UrlLabel" type="Label" parent="SettingsPopup/SettingsContent/ConnectionSection/UrlRow"]
layout_mode = 2
text = "URL:"

[node name="UrlInput" type="LineEdit" parent="SettingsPopup/SettingsContent/ConnectionSection/UrlRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://localhost:11434/v1/chat/completions"

[node name="ApiKeyRow" type="HBoxContainer" parent="SettingsPopup/SettingsContent/ConnectionSection"]
layout_mode = 2

[node name="ApiKeyLabel" type="Label" parent="SettingsPopup/SettingsContent/ConnectionSection/ApiKeyRow"]
layout_mode = 2
text = "API Key:"

[node name="ApiKeyInput" type="LineEdit" parent="SettingsPopup/SettingsContent/ConnectionSection/ApiKeyRow"]
layout_mode = 2
size_flags_horizontal = 3
secret = true
placeholder_text = "Enter your API key"

[node name="HSeparator4" type="HSeparator" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ParametersSection" type="VBoxContainer" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ParametersLabel" type="Label" parent="SettingsPopup/SettingsContent/ParametersSection"]
layout_mode = 2
text = "Parameters"

[node name="TempRow" type="HBoxContainer" parent="SettingsPopup/SettingsContent/ParametersSection"]
layout_mode = 2

[node name="TempLabel" type="Label" parent="SettingsPopup/SettingsContent/ParametersSection/TempRow"]
layout_mode = 2
text = "Temperature:"

[node name="TempSlider" type="HSlider" parent="SettingsPopup/SettingsContent/ParametersSection/TempRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 2.0
step = 0.1
value = 0.7

[node name="TempValue" type="Label" parent="SettingsPopup/SettingsContent/ParametersSection/TempRow"]
layout_mode = 2
text = "0.7"

[node name="SystemPromptLabel" type="Label" parent="SettingsPopup/SettingsContent/ParametersSection"]
layout_mode = 2
text = "System Prompt:"

[node name="SystemPromptInput" type="TextEdit" parent="SettingsPopup/SettingsContent/ParametersSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "You are a helpful AI assistant..."

[node name="HSeparator5" type="HSeparator" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="ButtonsRow" type="HBoxContainer" parent="SettingsPopup/SettingsContent"]
layout_mode = 2

[node name="Spacer" type="Control" parent="SettingsPopup/SettingsContent/ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelBtn" type="Button" parent="SettingsPopup/SettingsContent/ButtonsRow"]
layout_mode = 2
text = "Cancel"

[node name="SaveBtn" type="Button" parent="SettingsPopup/SettingsContent/ButtonsRow"]
layout_mode = 2
text = "Save"
